# ACM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
acm/: __init__.py
acm/activation/: engine.py
aria_memory_adapter/: __init__.py
benchmarks/: m0_smoke.py
docs/: ACM_ARCHITECTURE_REVIEW_M6.md  ACM_CERTIFIED_v1.md  ACM_COMPARATIVE_RESEARCH.md  ACM_MATURITY_REVIEW_v1.md  ACM_PHASE2_RECOMMENDATIONS.md  ACM_V1_READINESS_REVIEW.md  ANALOGICAL_FOUNDATIONS.md  ANALOGICAL_REASONING.md  API.md  ARCHITECTURE.md  ARIA_INTEGRATION_ARCHITECTURE.md  ARIA_INTEGRATION_BLUEPRINT_POINTER.md  ARIA_MEMORY_ADAPTER.md  ASSISTANT_IDENTITY.md  ASSISTANT_IDENTITY_PIPELINE.md  ASSOCIATION_MODEL.md  ATTENTION_MODEL.md  B46_LEGACY_EXTRACTION_CLOSURE.md  B51_ARIA_PROMOTION_CLOSURE.md  BENCHMARK_STRATEGY.md  BIOLOGICAL_VS_TECHNICAL_FUNCTION.md  CERTIFICATION_FRAMEWORK.md  CERTIFICATION_RESULTS.md  COGNITIVESTORE_ARCHITECTURE.md  COGNITIVE_ABSTRACTION.md  COGNITIVE_ACTIVATION_ARCHITECTURE.md  COGNITIVE_CAPABILITY_MAP.md  COGNITIVE_DISPATCH_ENGINE.md  COGNITIVE_DISPATCH_VALIDATION.md  COGNITIVE_EXECUTION_PIPELINE.md  COGNITIVE_FACT_MODEL.md  COGNITIVE_GLOSSARY.md  COGNITIVE_HANDLER_MODEL.md  COGNITIVE_INTENT_CLASSIFICATION.md  COGNITIVE_MEMORY_OBJECT.md  COGNITIVE_MEMORY_TEST_STRATEGY.md  COGNITIVE_NETWORKS.md  COGNITIVE_OWNERSHIP.md  COGNITIVE_RECONSTRUCTION.md  COGNITIVE_RESEARCH_FOUNDATIONS.md  (+119 more)
examples/: hello_acm.py
scripts/: acm_learning_certification.py  check_independence.py
tests/: conftest.py
(+169 files in other folders)
