[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aria-cognitive-memory"
version = "0.18.0"
description = "ACM — Aria Cognitive Memory: a reusable, host-agnostic cognitive memory engine"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ACM Contributors" }]
keywords = ["cognitive-memory", "acm", "agents", "lifelong-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/nhflyguy1970-oss/ACM"
Documentation = "https://github.com/nhflyguy1970-oss/ACM/tree/main/docs"
Issues = "https://github.com/nhflyguy1970-oss/ACM/issues"

[tool.hatch.build.targets.wheel]
packages = ["acm", "aria_memory_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
